# modulo6-GraficasXComputadoras

./: Cargo.toml  readme.md
src/: camera.rs  color.rs  fragment.rs  fragment_shader.rs  framebuffer.rs  main.rs  obj.rs  triangle.rs  uniforms.rs  utils.rs  vertex.rs  vertex_shader.rs
