[package]
name = "codigo"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.28"
nalgebra-glm = "0.19"
pixels = "0.14.0"  # Usa la última versión de pixels
winit = "0.27"     # Usa una versión compatible con pixels
image = "0.23"     # Agrega esta línea para la dependencia de image
rayon = "1.5"   # Para procesamiento paralelo